fixes for outdated unit tests

--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -131,11 +131,11 @@
                             style="width: 105px; text-transform: uppercase;">{{item.type}}</span>
                             <span style="min-width: 186px;">{{item.desired_start_time}}</span>
 
-                            <md-button class="inline-action-button" title="Free Schedule Blocks" style="margin:0"
+                            <md-button class="inline-action-button" title="Unassign Schedule Blocks" style="margin:0"
                                        ng-click="vm.freeScheduleBlock(subarray, item); $event.stopPropagation()">
                                 <span style="display: inherit" class="fa fa-minus"></span>
                             </md-button>
-                            <md-button class="inline-action-button" title="Schedule Draft Schedule Block"
+                            <md-button class="inline-action-button" title="Schedule"
                                        style="margin:0"
                                        ng-click="vm.scheduleDraft(item); $event.stopPropagation()">
                                 <span style="display: inherit" class="fa fa-check"></span>
