--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -35,7 +35,7 @@
 
         <div flex layout="column" style="overflow: auto; padding-left: 8px; margin-right: 8px">
             <div flex ng-repeat="subarray in vm.subarrays | filter: (vm.subarray_id || '') && {id: vm.subarray_id} | orderBy:'id'"
-                class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start"
+                class="subarray-container" layout="row" layout-align="start"
                 md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
 
                 <div layout="column" flex>
@@ -102,7 +102,7 @@
                         </span>
                         </div>
                     </md-toolbar>
-                    <div md-theme="{{themePrimary}}" flex class="schedule-draft-data-list"
+                    <div md-theme="{{themePrimary}}" flex class="schedule-draft-data-list md-whiteframe-z1"
                          ng-class="{'maintenance-bg':subarray.maintenance}">
                         <div
                             ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr:subarray.id, state:'DRAFT'} track by item.id"
@@ -155,6 +155,83 @@
                                     </md-menu-item>
                                 </md-menu-content>
                             </md-menu>
+                        </div>
+                    </div>
+
+                    <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" style="margin-top: 8px"
+                                class="md-whiteframe-z1 md-toolbar-tools-medium"
+                                layout="row" layout-align="center center" title="{{subarray.description}}">
+                        <span flex style="margin-top: -5px;">Observations</span>
+                        <div class="unselectable list-subheader-title" layout="row" layout-align="start center"
+                             style="position: absolute; right: 0; bottom: 0; padding: 0; height: 12px">
+                            <span style="width: 125px; padding-left: 8px" class="subheader-text">
+                                <span>ID</span>
+                            </span>
+                            <span flex class="subheader-text">
+                                <span>Description</span>
+                            </span>
+                            <span style="width: 150px" class="subheader-text">
+                                <span>Verification State</span>
+                            </span>
+                            <span style="width: 75px" class="subheader-text">
+                                <span>Ready</span>
+                            </span>
+                            <span style="width: 105px" class="subheader-text">
+                                <span>Type</span>
+                            </span>
+                            <span style="width: 175px" class="subheader-text">
+                                <span>Desired Time</span>
+                            </span>
+                        </div>
+                    </md-toolbar>
+
+                    <div flex md-theme="{{themePrimaryButtons}}" class="schedule-draft-data-list md-whiteframe-z1"
+                         style="padding: 0; direction: rtl; max-height: 300px" ng-class="{'maintenance-bg':subarray.maintenance}">
+                        <div ng-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id}) track by item.id"
+                             ng-click="vm.setSelectedSchedule(item);" style="padding: 0 4px"
+                             ng-class="{'selected-schedule-row': item === vm.selectedSchedule}"
+                             class="schedule-draft-item" layout="row" layout-align="start center">
+
+                            <md-progress-linear md-theme="green" ng-if="item.state === 'ACTIVE'" class="md-primary progress-bar-fill"
+                                                md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
+                                                style="position: absolute; left: 0; right: 0; opacity: 0.8;">
+                            </md-progress-linear>
+                            <div layout="column" layout-align="start" style="width: 120px">
+                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                      style="font-size: 14px; font-weight: bold">{{item.id_code}}
+                                </span>
+                                <span><i>{{item.owner}}</i></span>
+                            </div>
+                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
+
+                            <span style="width: 150px">{{item.verification_state}}</span>
+                            <span style="width: 75px"
+                                  ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                  style="text-transform: uppercase; width: 105px">{{item.type}}</span>
+                            <span style="width: 140px;">{{item.desired_start_time}}</span>
+                            <md-menu ng-show="!item.pendingVerify" md-theme="{{themePrimaryButtons}}">
+                                <md-button class="md-icon-button inline-action-button" ng-click="item.loadMenuContents = true; $mdOpenMenu(); $event.stopPropagation()"
+                                           style="margin: 0">
+                                    <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+                                </md-button>
+                                <md-menu-content style="padding: 8px;">
+                                    <md-menu-item>
+                                        <md-button ng-click="vm.viewSBTaskLog(item)" title="View Progress in a New Tab">View Progress</md-button>
+                                    </md-menu-item>
+                                    <md-menu-item ng-if="item.loadMenuContents && item.type == 'OBSERVATION'">
+                                        <md-button ng-disabled="!item.sub_nr" ng-click="vm.verifySB(item)">Verify Schedule</md-button>
+                                    </md-menu-item>
+                                    <md-menu-item ng-if="item.loadMenuContents">
+                                        <md-button ng-click="vm.moveScheduleRowToDraft(item)" title="Move Schedule Block to Draft">Move to Draft</md-button>
+                                    </md-menu-item>
+                                    <md-menu-item>
+                                        <md-button ng-click="vm.setPriority(item, $event)" title="Set Schedule Block's Priority">Set Priority</md-button>
+                                    </md-menu-item>
+                                </md-menu-content>
+                            </md-menu>
+                            <span ng-show="item.pendingVerify" style="transition: 0s; width: 35px; height:48px;"></span>
+                            <span ng-show="item.pendingVerify" style="transition: 0s; width: 35px; height:48px;"></span>
                         </div>
                     </div>
                 </div>
