added sounds copy step in gulp build

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <div class="main-footer-toolbar" layout="column" ng-if="loggedIn">
             <md-toolbar md-theme="{{themePrimary}}" class="md-toolbar-tools-small md-whiteframe-z1" layout="row">
                 <span>
-                    Interlock State: {{$root.interlockState.value}}
+                    Interlock State: {{$root.interlockState.value ? $root.interlockState.value : 'None'}}
                     <md-tooltip>Current Interlock State</md-tooltip>
                 </span>
                 <div style="position: absolute; bottom: 0; left: 0; right: 0" layout="row" layout-align="center center">
