--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -235,8 +235,8 @@
                         <span flex>Resources</span>
                     </div>
                     <div style="font-size: 12px; width: 100%;" layout="row" layout-align="start center">
-                        <span style="margin-left: 8px;" flex>Allocated</span>
-                        <span style="margin-right: 8px;">Assigned</span>
+                        <span style="margin-left: 8px;" flex>Selected SB Resources</span>
+                        <span style="margin-right: 8px;">Subarray Resources</span>
                     </div>
                 </md-toolbar>
                 <div flex style="padding: 0" layout="row">
