added simple github links to about katgui display

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -6,8 +6,10 @@
                 <span flex>About katGUI</span>
             </div>
         </md-toolbar>
-        <md-content layout="column" layout-padding>
-        </md-content>
+        <div layout="column" layout-align="center center" style="height: 200px">
+            <span>KATGUI on github.com: <a href="https://github.com/ska-sa/katgui" target="_blank">https://github.com/ska-sa/katgui</a></span>
+            <span>KATPortal on github.com: <a href="https://github.com/ska-sa/katportal" target="_blank">https://github.com/ska-sa/katportal</a></span>
+        </div>
     </div>
 
 </div>
