--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item>
+                <md-item ng-if="$root.currentUser.req_role === 'operator' || $root.currentUser.req_role === 'lead_operator'">
                     <md-item-content style="padding-bottom: 8px;" ng-click="vm.sideNavStateGo('operator-control')">
                         <div class="menu-item" layout="row" layout-align="start center">
                             <md-button flex><span class="fa fa-cogs"></span><span>Operator Control</span></md-button>
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item>
+                <md-item ng-if="$root.currentUser.req_role === 'lead_operator'">
                     <md-item-content style="padding-bottom: 8px;" ng-click="vm.sideNavStateGo('cam-components')">
                         <div class="menu-item" layout="row" layout-align="start center">
                             <md-button flex><span class="fa fa-cubes"></span><span>CAM Components</span></md-button>
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item>
+                <md-item ng-if="$root.currentUser.req_role === 'lead_operator'">
                     <md-item-content style="padding-bottom: 8px;" ng-click="vm.sideNavStateGo('process-control')">
                         <div class="menu-item" layout="row" layout-align="start center">
                             <md-button flex><span class="fa fa-wrench"></span><span>Process Control</span></md-button>
@@ -193,13 +193,16 @@
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler')">
                             <md-button flex><span class="fa fa-list"></span><span>Subarrays Workflow</span></md-button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.drafts')">
+                        <div ng-if="$root.currentUser.req_role === 'lead_operator' || $root.currentUser.req_role === 'control_authority'"
+                             class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.drafts')">
                             <md-button flex><span class="fa fa-pencil"></span><span>Schedule Block Drafts</span></md-button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.subarrays')">
+                        <div ng-if="$root.currentUser.req_role === 'lead_operator' || $root.currentUser.req_role === 'control_authority'"
+                             class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.subarrays')">
                             <md-button flex><span class="fa fa-asterisk"></span><span>Subarray Schedule Blocks</span></md-button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.resources')">
+                        <div ng-if="$root.currentUser.req_role === 'lead_operator' || $root.currentUser.req_role === 'control_authority'"
+                             class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.resources')">
                             <md-button flex><span class="fa fa-sitemap"></span><span>Set-up Subarray</span></md-button>
                         </div>
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.observations')">
@@ -326,7 +329,7 @@
                     </div>
                     <div ng-if="$root.utcTime && showLocalAndSAST">
                         <span class="toolbar-time-span">{{$root.utcTime}}</span><span class="toolbar-time-span" style="font-size: 12px;"> UTC</span><br/>
-                        <span class="toolbar-time-span">{{$root.localTime}}</span><span class="toolbar-time-span" style="font-size: 12px;"> SAST</span>
+                        <span class="toolbar-time-span">{{$root.localTime}}</span><span class="toolbar-time-span" style="font-size: 12px;"> local</span>
                     </div>
                 </div>
 
