--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -71,14 +71,14 @@
                 <span ng-show="receptor.showHorizonMask" class="fa fa-area-chart horizon-mask-showing"
                       title="Showing Horizon Mask"></span>
                 <div class="md-whiteframe-z3 receptor-pointing-tooltip-top" ng-show="receptor.showDetails"
-                     style="top: 68px; left: -75px; width: 208px"
+                     style="top: 68px; left: -105px; min-width: 268px"
                      layout="column" layout-align="start">
                     <span style="width: 100%; text-align: center"><b>{{receptor.name}}</b></span>
-                    <span>azim: <b>{{receptor['ap_actual_azim'].value}}</b>, elev: <b>{{receptor['ap_actual_elev'].value}}</b></span>
-                    <span>azim: <b>{{receptor['ap_requested_azim'].value}}</b>, elev: <b>{{receptor['ap_requested_elev'].value}}</b> (requested)</span>
-                    <span>ra: <b>{{receptor['pos_request_base_ra'].value}}</b>, dec: <b>{{receptor['pos_request_base_dec'].value}}</b> (requested)</span>
-                    <span>Delta sky: <b>{{receptor['pos_delta_sky'].value}}</b></span>
-                    <span>Delta azim: <b>{{receptor['pos_delta_azim'].value}}</b>, Delta elev: <b>{{receptor['pos_delta_elev'].value}}</b></span>
+                    <span>azim: <b>{{receptor['ap_actual_azim'].value | number:2}}</b>, elev: <b>{{receptor['ap_actual_elev'].value | number:2}}</b></span>
+                    <span>azim: <b>{{receptor['ap_requested_azim'].value | number:2}}</b>, elev: <b>{{receptor['ap_requested_elev'].value | number:2}}</b> (requested)</span>
+                    <span>ra: <b>{{receptor['pos_request_base_ra'].value | number:2}}</b>, dec: <b>{{receptor['pos_request_base_dec'].value | number:2}}</b> (requested)</span>
+                    <span>Delta sky: <b>{{receptor['pos_delta_sky'].value | number:2}}</b></span>
+                    <span>Delta azim: <b>{{receptor['pos_delta_azim'].value | number:2}}</b>, Delta elev: <b>{{receptor['pos_delta_elev'].value | number:2}}</b></span>
                     <span>Target: <b>{{receptor['target'].value}}</b></span>
                     <span>Status:</span>
                     <span>Lock: <b>{{receptor['lock'].value}}</b></span>
