--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -174,6 +174,12 @@
                     </span>
                     <input class="fade-in" type="search" style="font-size: 14px; margin-right: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q3"
                        placeholder="Search Schedules..."/>
+                    <md-button md-theme="{{themePrimaryButtons}}"
+                               ng-click="completedScheduleBlockListVisible = !completedScheduleBlockListVisible"
+                               class="md-primary md-raised md-icon-button">
+                        <span class="fa fa-chevron-up" ng-show="!completedScheduleBlockListVisible"></span>
+                        <span class="fa fa-chevron-down" ng-show="completedScheduleBlockListVisible"></span>
+                    </md-button>
                     <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
                          style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0; height: 12px">
                             <span style="width: 125px" class="subheader-text">
