--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -123,6 +123,8 @@
                         <md-list-item>
                             <div class="md-list-item-text" style="font-size: 18px; font-weight: bold" layout="row" flex>
                                 <span style="width: 130px">Userlog Type</span>
+                                <span style="width: 150px">Entry Timestamp</span>
+                                <span style="width: 130px">User</span>
                                 <span style="width: 150px">Event Started</span>
                                 <span style="width: 150px">Event Ended</span>
                                 <span style="width: 150px">Userlog Content</span>
@@ -133,6 +135,8 @@
                             <div class="md-list-item-text" style="font-size:small" flex
                                  layout="row">
                                 <span style="width: 130px">{{rlog.userlog_type}}</span>
+                                <span style="width: 150px">{{rlog.timestamp}}</span>
+                                <span style="width: 130px">{{rlog.name}}</span>
                                 <span style="width: 150px">{{rlog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                                 <span style="width: 150px">{{rlog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                                 <span flex>{{rlog.userlog_content}}</span>
